--- a/Host/cpu/manage/template/detail.html
+++ b/Host/cpu/manage/template/detail.html
@@ -8,12 +8,70 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 </head>
 <body>
-    <div class="bg-info clearfix p-4 mb-4 ">
+    <div class="bg-info clearfix p-1 mb-1 ">
         <div class="container">
             <a href="/" type="button" class="btn float-left text-white font-weight-bold">TOP</a>
         </div>
     </div>
-    
+
+    <div class="container">
+        <h1>{{ .host.Hostname }}　：　{{ .host.IpAdd }}</h1>
+        <div class="row">
+            <div class="col">
+                <p class="alert alert-success" role="alert">CPU0</p>
+                {{ range .cpu }}
+                <p>{{ .Cpu0 }}</p>
+                {{ end }}  
+            </div>
+            <div class="col">
+                <p class="alert alert-success" role="alert">CPU1</p>
+                {{ range .cpu }}
+                <p>{{ .Cpu1 }}</p>
+                {{ end }}  
+            </div>
+            <div class="col">
+                <p class="alert alert-success" role="alert">CPU2</p>
+                {{ range .cpu }}
+                <p>{{ .Cpu2 }}</p>
+                {{ end }}  
+            </div>
+            <div class="col">
+                <p class="alert alert-success" role="alert">CPU3</p>
+                {{ range .cpu }}
+                <p>{{ .Cpu3 }}</p>
+                {{ end }}  
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
+                <p class="alert alert-success" role="alert">Virtual Mem [Used Percent]</p>
+                {{ range .vir }}
+                <p>{{ .UsedPercent }}</p>
+                {{ end }}  
+            </div>
+            <div class="col">
+                <p class="alert alert-success" role="alert">Swap Mem [Used Percent]</p>
+                {{ range .swa }}
+                <p>{{ .UsedPercent }}</p>
+                {{ end }}  
+            </div>
+        </div>
+    </div>
+
+    <!--
+<div class="row">
+    <h1>{{.host.Hostname}}</h1>
+    {{ range .cpu}}
+        <p>CPU0 : {{.Cpu0}} </p>
+    {{end}}
+</div>
+<div class="col-xl-6">
+    <h1>{{.host.Hostname}}</h1>
+    {{ range .cpu}}
+        <p>CPU0 : {{.Cpu0}} </p>
+    {{end}}
+</div>
+    -->
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
