--- a/Host/cpu/manage/template/index.html
+++ b/Host/cpu/manage/template/index.html
@@ -37,8 +37,8 @@
         {{ range .hostdata }}
             <tbody>
               <tr class="table">
-                <th scope="row">{{ .ID }}</th>
-                <td><a href="/detail/{{.ID}}">{{ .Hostname }}</a> </td>
+                <th scope="row">{{ .Id }}</th>
+                <td><a href="/detail/{{.Id}}">{{ .Hostname }}</a> </td>
                 <td>{{ .IpAdd }}</td>
               </tr>
             </tbody>
